--- a/tpls/knowledge/promise.html
+++ b/tpls/knowledge/promise.html
@@ -8,18 +8,39 @@
 	setTimeout(function(){
 		console.log(4)
 	},0)
+	console.dir(Promise)
 	new Promise(function(resolve,reject){
 		console.log(1)
 		for(let i = 1 ; i < 10000 ; i++){
 			if(i == 9999){
 				console.log(5)
 			}
+			if(i == 100){
+				console.log(8)
+				reject('失败了')
+			}
 		}
-		resolve()
+		setTimeout(function(){
+			console.log('执行完成')
+			resolve('随便什么数据')
+		}, 2000);
 	}).then(function(value){
 		console.log(2)
+	},function(value){
+		console.log(9)
+	}).then(function(value){
+		console.log(6)
+	}).then(function(value){
+		console.log(7)
 	})
+	// }).catch(function(reason){
+	//     console.log('rejected');
+	//     console.log(reason);
+	// });
 	console.log(3)
 </script>
 </body>
 </html>
+
+<!-- Promise.all([])  以慢为准 -->
+<!-- Promise.race([])   以快为准 -->
