--- a/tpls/algorithm/demo9.html
+++ b/tpls/algorithm/demo9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>会问字符串</title>
+	<title>回文字符串</title>
 	<meta charset="utf-8">
 	<script type="text/javascript">
 		isPalindrome("racecar"); // true
