--- a/tpls/knowledge/func.html
+++ b/tpls/knowledge/func.html
@@ -27,10 +27,10 @@
 	<script type="text/javascript">
 		var a = 100;
 		function a(){
-			console.log(a);
+			console.log('1 '+a);
 		}
-		console.log(a)
-		a();
+		console.log('2 '+a)  //2 100
+		a();  //a is not a function
 	</script>
 </body>
 </html>
