--- a/tpls/knowledge/取非行间样式.html
+++ b/tpls/knowledge/取非行间样式.html
@@ -15,9 +15,11 @@
 <script type="text/javascript">
 	window.onload = function() {
 		var oDiv = document.getElementById("div")
+		//IE
 		if(oDiv.currentStyle){
 			console.log(oDiv.currentStyle.width)
 		}else{
+			//非IE
 			console.log(getComputedStyle(oDiv,null).width)
 		}
 	}
