--- a/tpls/knowledge/func.html
+++ b/tpls/knowledge/func.html
@@ -10,8 +10,8 @@
 	3)函数声明比变量声明更置顶：(函数在变量上面)
 	4)变量和赋值语句一起书写，在js引擎解析时，会将其拆成声明和赋值2部分，声明置顶，赋值保留在原来位置
 	5)声明过的变量不会重复声明
-	
-	知道以上的规则,上面的代码等同于 :  
+
+	知道以上的规则,上面的代码等同于 :
 
 	var a=function (){
 	　　console.log(a);
@@ -25,12 +25,26 @@
 	}
 	a();
 	<script type="text/javascript">
+		console.log(a);
+		// ƒ a(){
+		// 	console.log('1 '+a);
+		// }
 		var a = 100;
 		function a(){
 			console.log('1 '+a);
 		}
 		console.log('2 '+a)  //2 100
 		a();  //a is not a function
+
+
+		//两个同名全局函数，执行最后一个
+		// function b(){
+		// 	alert('first')
+		// }
+		// function b(){
+		// 	alert('second')
+		// }
+		// b(); //second
 	</script>
 </body>
 </html>
