--- a/tpls/knowledge/console.html
+++ b/tpls/knowledge/console.html
@@ -84,6 +84,29 @@
 
             console.groupCollapsed(); //这句指令下面所有的console都会是以收缩的形式展现
 
+            // function doTask(){
+            //     doSubTaskA(1000);
+            //     doSubTaskA(100000);
+            //     doSubTaskB(10000);
+            //     doSubTaskC(1000,10000);
+            // }
+            // function doSubTaskA(count){
+            //     for(var i=0;i<count;i++){}
+            // }
+            //
+            // function doSubTaskB(count){
+            //     for(var i=0;i<count;i++){}
+            // }
+            //
+            // function doSubTaskC(countX,countY){
+            //     for(var i=0;i<countX;i++){
+            //         for(var j=0;j<countY;j++){}
+            //     }
+            // }
+            // console.profile();
+            // doTask();
+            // console.profileEnd();
+
         </script>
     </body>
 </html>
