--- a/tpls/knowledge/img.html
+++ b/tpls/knowledge/img.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 	<div>
-		<p>防守打法似懂非懂是</p>
+		<p>居中显示</p>
 		<img src="" alt="图片"/>
-		<p>防守打法似懂非懂是</p>
+		<p>居中显示</p>
 	</div>
 </body>
 </html>
