--- a/tpls/knowledge/promise.html
+++ b/tpls/knowledge/promise.html
@@ -18,6 +18,7 @@
 			if(i == 100){
 				console.log(8)
 				reject('失败了')
+				console.log(10)
 			}
 		}
 		setTimeout(function(){
@@ -38,7 +39,7 @@
 	//     console.log(reason);
 	// });
 	console.log(3)
-	//结果为：1 8 5 3 9 6 7 4 执行完成
+	//结果为：1 8 10 5 3 9 6 7 4 执行完成
 </script>
 </body>
 </html>
