--- a/tpls/es6/promise.html
+++ b/tpls/es6/promise.html
@@ -5,39 +5,50 @@
     </head>
     <body>
         <script>
-        // console.time('耗时测试p1')
-        // const p1 = new Promise(function (resolve, reject) {
-        //     // setTimeout(() => {
-        //         console.timeEnd('耗时测试p1');
-        //         console.log('p1')
-        //         reject(new Error('fail'))
-        //     // }, 500)
-        // })
-        //
-        // const p2 = new Promise(function (resolve, reject) {
-        //     console.time('耗时测试p2')
-        //     setTimeout(() => {
-        //         console.timeEnd('耗时测试p2')
-        //         // resolve(p1)
-        //     }, 1000)
-        // })
-        //
-        // p2
-        // .then(result => console.log(result))
-        // .catch(error => console.log(error))
-        setTimeout(function(){
-            console.log('setTimeout')
-        },0)
-
-        let p = new Promise(function(resolve, reject) {
-            resolve()
+        // 测试 new promise 和 setTimeout 的关系
+        /**console.time('耗时测试p1')
+        const p1 = new Promise(function (resolve, reject) {
+            setTimeout(() => {
+                console.timeEnd('耗时测试p1');
+                console.log('p1')
+                // reject(new Error('fail'))
+                resolve('ok')
+            }, 3000)
         })
-
-        p.then(data => {
-            console.log('then')
+        
+        const p2 = new Promise(function (resolve, reject) {
+            console.time('耗时测试p2')
+            setTimeout(() => {
+                console.timeEnd('耗时测试p2')
+                resolve(p1)
+            }, 5000)
         })
+        
+        p2
+        .then(result => console.log(result))
+        .catch(error => console.log(error))
 
-        console.log('w')
+        结果
+        耗时测试p1: 3000.717041015625ms
+              p1
+        耗时测试p2: 5000.268798828125ms
+              ok
+        */
+
+        // 测试 promise和setTimeout 的顺序
+        // setTimeout(function(){
+        //     console.log('setTimeout')
+        // },0)
+
+        // let p = new Promise(function(resolve, reject) {
+        //     resolve()
+        // })
+
+        // p.then(data => {
+        //     console.log('then')
+        // })
+
+        // console.log('w')  //输出顺序：w then setTimeout
         </script>
     </body>
 </html>
