--- a/tpls/knowledge/objToString.html
+++ b/tpls/knowledge/objToString.html
@@ -19,8 +19,8 @@
 
 	console.log(Object.keys(obj).map((key) => {
 		return key+'='+obj[key]
-	}))
-	console.log(a)
+	}))   //Array(4) 0:"a=1"  1:"b=2"   2:"c=3"   3:"d=0,1,2"   length:4
+	console.log(a) //a=1&b=2&c=3&d=0,1,2
 </script>
 </body>
 </html>
