--- a/tpls/es6/iterable.html
+++ b/tpls/es6/iterable.html
@@ -5,7 +5,11 @@
 </head>
 <body>
   <script>
-    
+    // let s = new Symbol();
+    let arr = [1,2,3,4]
+    for(const i of arr) {
+      console.log(i)
+    }
   </script>
 </body>
 </html>
